Created page with "Standardní klávesové zkratky {{KEY|Ctrl}}+{{KEY|C}}, {{KEY|Ctrl}}+{{KEY|X}} a {{KEY|Ctrl}}+{{KEY|V}} lze použít ke kopírování, vyjmutí a vložení vybrané geometrie Sketcheru včetně souvisejících vazeb. Tyto nástroje jsou však k dispozici také v menu {{MenuCommand|Sketch → Nástroje náčrtu}}. Lze je použít v rámci stejného náčrtu, ale také mezi různými náčrtky nebo samostatnými instancemi FreeCADu. Jelikož jsou data zkopírována do schr..."

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -338,11 +338,8 @@
 </p>
 <h2><span id="Kop.C3.ADrov.C3.A1n.C3.AD.2C_vyjmut.C3.AD_a_vlo.C5.BEen.C3.AD"></span><span class="mw-headline" id="Kop&iacute;rov&aacute;n&iacute;,_vyjmut&iacute;_a_vlo&#382;en&iacute;">Kop&iacute;rov&aacute;n&iacute;, vyjmut&iacute; a vlo&#382;en&iacute;</span></h2>
 <p><span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
+</p><p>Standardn&iacute; kl&aacute;vesov&eacute; zkratky <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>+<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">C</span>, <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>+<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">X</span> a <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>+<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">V</span> lze pou&#382;&iacute;t ke kop&iacute;rov&aacute;n&iacute;, vyjmut&iacute; a vlo&#382;en&iacute; vybran&eacute; geometrie Sketcheru v&#269;etn&#283; souvisej&iacute;c&iacute;ch vazeb. Tyto n&aacute;stroje jsou v&scaron;ak k dispozici tak&eacute; v menu <b>Sketch &rarr; N&aacute;stroje n&aacute;&#269;rtu</b>. Lze je pou&#382;&iacute;t v r&aacute;mci stejn&eacute;ho n&aacute;&#269;rtu, ale tak&eacute; mezi r&#367;zn&yacute;mi n&aacute;&#269;rtky nebo samostatn&yacute;mi instancemi FreeCADu. Jeliko&#382; jsou data zkop&iacute;rov&aacute;na do schr&aacute;nky ve form&#283; k&oacute;du Pythonu, lze je pou&#382;&iacute;t i jin&yacute;mi zp&#367;soby (nap&#345;. sd&iacute;let na f&oacute;ru).
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The standard keyboard shortcuts, <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>+<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">C</span>, <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>+<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">X</span> and <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>+<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">V</span>, can be used to copy, cut and paste selected Sketcher geometry including related constraints. But these tools are also available from the <b>Sketch &rarr; Sketcher Tools</b> menu. They can be used within the same sketch but also between different sketches or separate instances of FreeCAD. Since the data is copied to the clipboard in the form of Python code, it can be used in other ways too (e.g. shared on the forum).
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Best_practices">Best practices</span></h2>
 </div>
@@ -477,15 +474,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118151756
+Cached time: 20260118152254
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.359 seconds
-Real time usage: 0.455 seconds
-Preprocessor visited node count: 1399/1000000
-Post&#8208;expand include size: 34965/2097152 bytes
-Template argument size: 9782/2097152 bytes
+CPU time usage: 0.467 seconds
+Real time usage: 0.656 seconds
+Preprocessor visited node count: 1398/1000000
+Post&#8208;expand include size: 34969/2097152 bytes
+Template argument size: 9786/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -493,19 +490,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.425      1 -total
- 25.37%    7.211      1 Template:Sketcher_Tools_navi/cs
- 19.05%    5.414      2 Template:Navigation_menu_2
- 13.59%    3.862      1 Template:Userdocnavi/cs
- 10.21%    2.901      1 Template:PropertyView
-  7.35%    2.090     34 Template:Version
-  7.10%    2.017      2 Template:Docnav
-  5.15%    1.465      1 Template:Variable
-  4.89%    1.391      6 Template:Caption
-  4.62%    1.314     14 Template:KEY
+100.00%   46.137      1 -total
+ 42.28%   19.508      1 Template:Sketcher_Tools_navi/cs
+ 13.93%    6.425      2 Template:Navigation_menu_2
+ 10.83%    4.998      1 Template:Userdocnavi/cs
+  7.53%    3.474      1 Template:PropertyView
+  5.70%    2.632      2 Template:Docnav
+  4.63%    2.136     34 Template:Version
+  4.60%    2.124      8 Template:VersionPlus
+  4.38%    2.019      1 Template:Variable
+  3.86%    1.782     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118151756 and revision id 1740691. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118152254 and revision id 1740693. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
