--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -342,11 +342,8 @@
 </p><p><span id="Best_practices"></span>
 </p>
 <h2><span id="Osv.C4.9Bd.C4.8Den.C3.A9_postupy"></span><span class="mw-headline" id="Osv&#283;d&#269;en&eacute;_postupy">Osv&#283;d&#269;en&eacute; postupy</span></h2>
-<div class="mw-translate-fuzzy">
-<h3><span id="Dobr.C3.A1_praxe"></span><span class="mw-headline" id="Dobr&aacute;_praxe">Dobr&aacute; praxe</span></h3>
-<p>Ka&#382;d&yacute; u&#382;ivatel CADu&nbsp;si &#269;asem vytvo&#345;&iacute; sv&#367;j vlastn&iacute; zp&#367;sob pr&aacute;ce, ale je n&#283;kolik obecn&yacute;ch princip&#367;, kter&eacute; je dobr&eacute; n&aacute;sledovat.
+<p>Ka&#382;d&yacute; u&#382;ivatel CADu si postupem &#269;asu vyvine sv&#367;j vlastn&iacute; zp&#367;sob pr&aacute;ce, ale existuje n&#283;kolik u&#382;ite&#269;n&yacute;ch obecn&yacute;ch z&aacute;sad, kter&eacute; je dobr&eacute; dodr&#382;ovat.
 </p>
-</div>
 <div class="mw-translate-fuzzy">
 <ul><li>Je snadn&#283;j&scaron;&iacute; pracovat se s&eacute;ri&iacute; jednoduch&yacute;ch n&aacute;&#269;rt&#367; ne&#382; s jedn&iacute;m slo&#382;it&yacute;m. Nap&#345;&iacute;klad prvn&iacute; n&aacute;&#269;rt m&#367;&#382;e b&yacute;t vytvo&#345;en jako z&aacute;klad 3D tvar&#367; (bu&#271; deska nebo obt&aacute;&#269;en&iacute;), zat&iacute;mco druh&yacute; m&#367;&#382;e obsahovat otvory nebo vy&#345;ezy (kapsy). N&#283;kter&eacute; detaily mohou b&yacute;t vynech&aacute;ny s pozd&#283;j&scaron;&iacute; realizac&iacute; na 3D tvaru. Pokud je na n&aacute;&#269;rtu mnoho zaoblen&iacute;, m&#367;&#382;ete je vynechat a p&#345;idat je a&#382; na 3D tvaru.</li>
 <li>V&#382;dy vytv&aacute;&#345;ejte uzav&#345;en&yacute; profil jinak n&aacute;&#269;rt nebude generovat t&#283;leso, ale m&iacute;sto toho skupinu otev&#345;en&yacute;ch ploch. Pokud chcete aby n&#283;kter&eacute; objekty nebyly zahrnuty p&#345;i vytv&aacute;&#345;en&iacute; t&#283;lesa, zm&#283;&#328;te je na konstruk&#269;n&iacute; prvky pomoc&iacute; n&aacute;stroje Konstruk&#269;n&iacute; m&oacute;d.</li>
@@ -473,13 +470,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118152330
+Cached time: 20260118152408
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.447 seconds
-Real time usage: 0.636 seconds
-Preprocessor visited node count: 1398/1000000
+CPU time usage: 0.384 seconds
+Real time usage: 0.500 seconds
+Preprocessor visited node count: 1394/1000000
 Post&#8208;expand include size: 34969/2097152 bytes
 Template argument size: 9786/2097152 bytes
 Highest expansion depth: 7/100
@@ -489,19 +486,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.073      1 -total
- 20.93%    7.131      1 Template:Sketcher_Tools_navi/cs
- 15.77%    5.374      2 Template:Navigation_menu_2
- 15.28%    5.207      1 Template:Userdocnavi/cs
- 12.64%    4.307      1 Template:PropertyView
-  6.76%    2.305     34 Template:Version
-  6.72%    2.288      2 Template:Docnav
-  6.71%    2.285      1 Template:Variable
-  5.77%    1.965     14 Template:KEY
-  5.21%    1.774      6 Template:Caption
+100.00%   46.197      1 -total
+ 26.43%   12.211      1 Template:Sketcher_Tools_navi/cs
+ 12.15%    5.611      2 Template:Navigation_menu_2
+ 10.40%    4.806      1 Template:Userdocnavi/cs
+  9.18%    4.241      1 Template:PropertyView
+  7.61%    3.516      8 Template:VersionPlus
+  6.66%    3.077     34 Template:Version
+  6.44%    2.973      2 Template:Docnav
+  6.33%    2.923     14 Template:KEY
+  4.84%    2.235      6 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118152329 and revision id 1740695. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118152408 and revision id 1740697. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
