--- a/wiki/Arch_Roof.html
+++ b/wiki/Arch_Roof.html
@@ -2,7 +2,7 @@
 <li><a href="de/Arch_Roof.html" class="mw-pt-progress mw-pt-progress--complete" title="Arch Dach (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
 <li><a href="es/Arch_Roof.html" class="mw-pt-progress mw-pt-progress--med" title="Arch Techo (15% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="fr/Arch_Roof.html" class="mw-pt-progress mw-pt-progress--high" title="Arch Toit (96% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="fr/Arch_Roof.html" class="mw-pt-progress mw-pt-progress--complete" title="Arch Toit (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="it/Arch_Roof.html" class="mw-pt-progress mw-pt-progress--high" title="Arch: Tetto (74% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="pl/Arch_Roof.html" class="mw-pt-progress mw-pt-progress--complete" title="Architektura: Dach (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="pt-br/Arch_Roof.html" class="mw-pt-progress mw-pt-progress--low" title="Telhado (11% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
@@ -58,7 +58,7 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<p>The <b>Arch Roof</b> tool allows for the creation of a sloped roof from a selected wire. The created roof object is parametric, keeping its relationship with the base object. The principle is that each edge is seen allotting a profile of roof (slope, width, overhang, thickness).
+<p>The <b>Arch Roof</b> tool allows for the creation of a sloped roof from a selected <a href="Draft_Wire.html" title="Draft Wire">Draft_Wire</a>. The created roof object is parametric, keeping its relationship with the base object. The principle is that each edge is seen allotting a profile of roof (slope, width, overhang, thickness).
 </p><p><b>Note:</b> This tool is still in development, and might fail with very complex shapes. 
 </p><p><span typeof="mw:File"><a href="index.php?title=RoofExample.png&amp;filetimestamp=20141208134123&amp;.html" class="mw-file-description"><img src="File/RoofExample.png" decoding="async" width="600" height="548" class="mw-file-element" data-file-width="647" data-file-height="591"></a></span>
 </p>
@@ -191,35 +191,35 @@ The 3rd image shows the automatically generated subtraction volume.</p>
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251023180151
+Cached time: 20260118153306
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.148 seconds
-Real time usage: 0.243 seconds
-Preprocessor visited node count: 1436/1000000
+CPU time usage: 0.193 seconds
+Real time usage: 0.241 seconds
+Preprocessor visited node count: 1437/1000000
 Post&#8208;expand include size: 33472/2097152 bytes
 Template argument size: 11446/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 3/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 6410/5000000 bytes
+Unstrip post&#8208;expand size: 6415/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   53.433      1 -total
- 22.48%   12.014      1 Template:BIM_Tools_navi
- 19.20%   10.259     13 Template:PropertyData
- 14.10%    7.535      2 Template:Navigation_menu_2
- 12.79%    6.835     13 Template:Variable
-  9.45%    5.051      3 Template:Version
-  7.66%    4.093      1 Template:TitleProperty
-  5.92%    3.161      1 Template:GuiCommand
-  5.17%    2.764      1 Template:Userdocnavi
-  4.82%    2.578      2 Template:Code
+100.00%   46.064      1 -total
+ 20.86%    9.608      1 Template:BIM_Tools_navi
+ 18.53%    8.535     13 Template:PropertyData
+ 17.39%    8.011      2 Template:Navigation_menu_2
+ 13.17%    6.065     13 Template:Variable
+ 11.73%    5.404      1 Template:GuiCommand
+  8.20%    3.779      1 Template:Userdocnavi
+  7.83%    3.608      2 Template:Code
+  7.44%    3.425      2 Template:Docnav
+  5.16%    2.375     30 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:3682-0!canonical and timestamp 20251023180151 and revision id 1675893. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:3682-0!canonical and timestamp 20260118153315 and revision id 1740698. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
