--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -344,16 +344,14 @@
 <h2><span id="Osv.C4.9Bd.C4.8Den.C3.A9_postupy"></span><span class="mw-headline" id="Osv&#283;d&#269;en&eacute;_postupy">Osv&#283;d&#269;en&eacute; postupy</span></h2>
 <p>Ka&#382;d&yacute; u&#382;ivatel CADu si postupem &#269;asu vyvine sv&#367;j vlastn&iacute; zp&#367;sob pr&aacute;ce, ale existuje n&#283;kolik u&#382;ite&#269;n&yacute;ch obecn&yacute;ch z&aacute;sad, kter&eacute; je dobr&eacute; dodr&#382;ovat.
 </p>
-<div class="mw-translate-fuzzy">
-<ul><li>Je snadn&#283;j&scaron;&iacute; pracovat se s&eacute;ri&iacute; jednoduch&yacute;ch n&aacute;&#269;rt&#367; ne&#382; s jedn&iacute;m slo&#382;it&yacute;m. Nap&#345;&iacute;klad prvn&iacute; n&aacute;&#269;rt m&#367;&#382;e b&yacute;t vytvo&#345;en jako z&aacute;klad 3D tvar&#367; (bu&#271; deska nebo obt&aacute;&#269;en&iacute;), zat&iacute;mco druh&yacute; m&#367;&#382;e obsahovat otvory nebo vy&#345;ezy (kapsy). N&#283;kter&eacute; detaily mohou b&yacute;t vynech&aacute;ny s pozd&#283;j&scaron;&iacute; realizac&iacute; na 3D tvaru. Pokud je na n&aacute;&#269;rtu mnoho zaoblen&iacute;, m&#367;&#382;ete je vynechat a p&#345;idat je a&#382; na 3D tvaru.</li>
-<li>V&#382;dy vytv&aacute;&#345;ejte uzav&#345;en&yacute; profil jinak n&aacute;&#269;rt nebude generovat t&#283;leso, ale m&iacute;sto toho skupinu otev&#345;en&yacute;ch ploch. Pokud chcete aby n&#283;kter&eacute; objekty nebyly zahrnuty p&#345;i vytv&aacute;&#345;en&iacute; t&#283;lesa, zm&#283;&#328;te je na konstruk&#269;n&iacute; prvky pomoc&iacute; n&aacute;stroje Konstruk&#269;n&iacute; m&oacute;d.</li>
-<li>Pou&#382;ijte vlastnost autovazba pro omezen&iacute; po&#269;tu vazeb, kdy&#382; je mus&iacute;te p&#345;id&aacute;vat ru&#269;n&#283;.</li>
-<li>&nbsp;Je obecn&eacute; pravidlo, nejprve nastavit konstruk&#269;n&iacute; vazby, potom d&eacute;lkov&eacute; vazby a nakonec uzamknout n&aacute;&#269;rt. Ale pamatujte si: pravidla jsou k tomu aby se poru&scaron;ovala. Kdy&#382; m&aacute;te probl&eacute;my s manipulac&iacute; s n&aacute;&#269;rtem, m&#367;&#382;e se hodit nastavit vazby mezi n&#283;kolika objekty p&#345;ed kompletac&iacute; profilu.</li>
-<li>Pokud je to mo&#382;n&eacute; vyst&#345;e&#271;te n&aacute;&#269;rt na po&#269;&aacute;tek (0,0) s vazbou uzam&#269;en&iacute;. Nen&iacute;-li n&aacute;&#269;rt symetrick&yacute;, um&iacute;st&#283;te jeden z jeho bod&#367; do po&#269;&aacute;tku nebo vyberte p&#283;kn&eacute; kulat&eacute; &#269;&iacute;slo pro uzam&#269;enou vzd&aacute;lenost. Ve verzi v0.12 nejsou implementov&aacute;ny extern&iacute; vazby (vazb&iacute; n&aacute;&#269;rt k existuj&iacute;c&iacute; 3D konstrukci jako jsou hrany nebo jin&eacute; n&aacute;&#269;rty).</li></ul>
-<p>To znamen&aacute;, &#382;e pro um&iacute;st&#283;n&iacute; n&aacute;sleduj&iacute;c&iacute;ch konstruk&#269;n&iacute;ch n&aacute;&#269;rt&#367; na prvn&iacute; n&aacute;&#269;rt budete pot&#345;ebovat nastavit vzd&aacute;lenost relativn&#283; k prvn&iacute;mu n&aacute;&#269;rtu ru&#269;n&#283;. Vazba uzam&#269;en&iacute; na (25,75) od po&#269;&aacute;tku je mnohem jednodu&scaron;&scaron;&iacute; pro zapamatov&aacute;n&iacute; ne&#382; (23.47,73.02).
-</p>
-<ul><li>M&aacute;te-li mo&#382;nost vybrat si mezi vazbou D&eacute;lky a vazbou Svisl&eacute; nebo Vodorovn&eacute; vzd&aacute;lenosti, dejte p&#345;ednost t&eacute; druh&eacute;. Vazby Svisl&eacute; nebo Vodorovn&eacute; vzd&aacute;lenosti jsou m&eacute;n&#283; n&aacute;ro&#269;n&eacute; na v&yacute;po&#269;ty.</li></ul>
-</div>
+<ul><li>S&eacute;rie jednoduch&yacute;ch n&aacute;&#269;rt&#367; se snadn&#283;ji spravuje ne&#382; jeden slo&#382;it&yacute; n&aacute;&#269;rt. Nap&#345;&iacute;klad prvn&iacute; n&aacute;&#269;rt m&#367;&#382;e b&yacute;t vytvo&#345;en pro z&aacute;kladn&iacute; 3D prvek (nap&#345;&iacute;klad podlo&#382;ku nebo rotaci), zat&iacute;mco druh&yacute; m&#367;&#382;e obsahovat otvory nebo v&yacute;&#345;ezy (kapsy). N&#283;kter&eacute; detaily lze vynechat a realizovat je pozd&#283;ji jako 3D prvky. Pokud je ve skice p&#345;&iacute;li&scaron; mnoho zaoblen&iacute;, m&#367;&#382;ete se rozhodnout je vynechat a p&#345;idat je jako 3D prvek.</li>
+<li>V&#382;dy vytv&aacute;&#345;ejte uzav&#345;en&yacute; profil, jinak v&aacute;&scaron; n&aacute;&#269;rt nevytvo&#345;&iacute; t&#283;leso, ale sadu otev&#345;en&yacute;ch ploch. Pokud nechcete, aby n&#283;kter&eacute; objekty byly zahrnuty do vytvo&#345;en&iacute; t&#283;lesa, p&#345;epn&#283;te je na konstruk&#269;n&iacute; prvky pomoc&iacute; n&aacute;stroje <a href="../Sketcher_ToggleConstruction.html" title="Sketcher ToggleConstruction">P&#345;epnout konstruk&#269;n&iacute; geometrii</a>.</li>
+<li>Pomoc&iacute; funkce Automatick&eacute; vazby m&#367;&#382;ete omezit po&#269;et vazeb, kter&eacute; budete muset p&#345;idat manu&aacute;ln&#283;.</li>
+<li>Obecn&#283; plat&iacute;, &#382;e nejprve pou&#382;ijte geometrick&aacute; omezen&iacute;, pot&eacute; rozm&#283;rov&aacute; omezen&iacute; a nakonec uzamkn&#283;te n&aacute;&#269;rt. Ale pamatujte: pravidla jsou od toho, aby se poru&scaron;ovala. Pokud m&aacute;te pot&iacute;&#382;e s manipulac&iacute; s n&aacute;&#269;rtem, m&#367;&#382;e b&yacute;t u&#382;ite&#269;n&eacute; nejprve prov&eacute;st vazby n&#283;kolika objekt&#367; a teprve pot&eacute; profil dokon&#269;it.</li>
+<li>Pokud je to mo&#382;n&eacute;, vycentrujte n&aacute;&#269;rt na po&#269;&aacute;tek (0,0). Pokud n&aacute;&#269;rt nen&iacute; symetrick&yacute;, um&iacute;st&#283;te jeden z jeho bod&#367; na po&#269;&aacute;tek.</li>
+<li>Pokud m&aacute;te mo&#382;nost volby mezi rozm&#283;rem vzd&aacute;lenosti a horizont&aacute;ln&iacute;m nebo vertik&aacute;ln&iacute;m rozm&#283;rem, up&#345;ednostn&#283;te ten druh&yacute;. Horizont&aacute;ln&iacute; a vertik&aacute;ln&iacute; rozm&#283;ry jsou v&yacute;po&#269;etn&#283; levn&#283;j&scaron;&iacute;.</li>
+<li>Obecn&#283; plat&iacute;, &#382;e nejvhodn&#283;j&scaron;&iacute;mi vazbami jsou: vodorovn&eacute; a svisl&eacute; vazby; vodorovn&eacute; a svisl&eacute; rozm&#283;ry; te&#269;n&eacute; vazby mezi body. Pokud je to mo&#382;n&eacute;, omezte pou&#382;it&iacute; t&#283;chto vazeb: dimenze vzd&aacute;lenosti; te&#269;n&aacute; vazba mezi hranami; vazba bodu na objekt; symetrick&aacute; vazba.</li>
+<li>Pokud m&aacute;te pochybnosti o platnosti n&aacute;&#269;rtu po jeho dokon&#269;en&iacute; (prvky se zbarv&iacute; zelen&#283;), zav&#345;ete dialogov&eacute; okno Sketcheru a pou&#382;ijte <span typeof="mw:File"><a href="../index.php?title=Sketcher_ValidateSketch.svg&amp;filetimestamp=20231231201854&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ValidateSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ValidateSketch.html" title="Sketcher ValidateSketch">Ov&#283;&#345;it Sketch</a>.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Flipping">Flipping</span></h2>
 </div>
@@ -470,13 +468,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118152408
+Cached time: 20260118153401
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.384 seconds
-Real time usage: 0.500 seconds
-Preprocessor visited node count: 1394/1000000
+CPU time usage: 0.386 seconds
+Real time usage: 0.503 seconds
+Preprocessor visited node count: 1396/1000000
 Post&#8208;expand include size: 34969/2097152 bytes
 Template argument size: 9786/2097152 bytes
 Highest expansion depth: 7/100
@@ -486,19 +484,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   46.197      1 -total
- 26.43%   12.211      1 Template:Sketcher_Tools_navi/cs
- 12.15%    5.611      2 Template:Navigation_menu_2
- 10.40%    4.806      1 Template:Userdocnavi/cs
-  9.18%    4.241      1 Template:PropertyView
-  7.61%    3.516      8 Template:VersionPlus
-  6.66%    3.077     34 Template:Version
-  6.44%    2.973      2 Template:Docnav
-  6.33%    2.923     14 Template:KEY
-  4.84%    2.235      6 Template:Caption
+100.00%   32.148      1 -total
+ 21.31%    6.850      1 Template:Sketcher_Tools_navi/cs
+ 15.46%    4.969      2 Template:Navigation_menu_2
+ 15.10%    4.855      1 Template:Userdocnavi/cs
+  8.96%    2.880      1 Template:PropertyView
+  8.40%    2.700     34 Template:Version
+  6.96%    2.238      2 Template:Docnav
+  5.24%    1.686      8 Template:VersionPlus
+  5.24%    1.684      6 Template:Caption
+  4.77%    1.534      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118152408 and revision id 1740697. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118153400 and revision id 1740700. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
