Created page with "== Překlopení =="

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -352,9 +352,9 @@
 <li>Pokud m&aacute;te mo&#382;nost volby mezi rozm&#283;rem vzd&aacute;lenosti a horizont&aacute;ln&iacute;m nebo vertik&aacute;ln&iacute;m rozm&#283;rem, up&#345;ednostn&#283;te ten druh&yacute;. Horizont&aacute;ln&iacute; a vertik&aacute;ln&iacute; rozm&#283;ry jsou v&yacute;po&#269;etn&#283; levn&#283;j&scaron;&iacute;.</li>
 <li>Obecn&#283; plat&iacute;, &#382;e nejvhodn&#283;j&scaron;&iacute;mi vazbami jsou: vodorovn&eacute; a svisl&eacute; vazby; vodorovn&eacute; a svisl&eacute; rozm&#283;ry; te&#269;n&eacute; vazby mezi body. Pokud je to mo&#382;n&eacute;, omezte pou&#382;it&iacute; t&#283;chto vazeb: dimenze vzd&aacute;lenosti; te&#269;n&aacute; vazba mezi hranami; vazba bodu na objekt; symetrick&aacute; vazba.</li>
 <li>Pokud m&aacute;te pochybnosti o platnosti n&aacute;&#269;rtu po jeho dokon&#269;en&iacute; (prvky se zbarv&iacute; zelen&#283;), zav&#345;ete dialogov&eacute; okno Sketcheru a pou&#382;ijte <span typeof="mw:File"><a href="../index.php?title=Sketcher_ValidateSketch.svg&amp;filetimestamp=20231231201854&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ValidateSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ValidateSketch.html" title="Sketcher ValidateSketch">Ov&#283;&#345;it Sketch</a>.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Flipping">Flipping</span></h2>
-</div>
+<p><span id="Flipping"></span>
+</p>
+<h2><span id="P.C5.99eklopen.C3.AD"></span><span class="mw-headline" id="P&#345;eklopen&iacute;">P&#345;eklopen&iacute;</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>The phenomenon that a fully constrained sketch, usually after a major change to one of its dimensions, reaches an unintended new state is know as "flipping". In the example below, changing one dimension completely changes the shape of the sketch. Note that the sketch with the new shape is still fully constrained.
 </p>
@@ -468,12 +468,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118153401
+Cached time: 20260118153447
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.386 seconds
-Real time usage: 0.503 seconds
+CPU time usage: 0.470 seconds
+Real time usage: 2.196 seconds
 Preprocessor visited node count: 1396/1000000
 Post&#8208;expand include size: 34969/2097152 bytes
 Template argument size: 9786/2097152 bytes
@@ -484,19 +484,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   32.148      1 -total
- 21.31%    6.850      1 Template:Sketcher_Tools_navi/cs
- 15.46%    4.969      2 Template:Navigation_menu_2
- 15.10%    4.855      1 Template:Userdocnavi/cs
-  8.96%    2.880      1 Template:PropertyView
-  8.40%    2.700     34 Template:Version
-  6.96%    2.238      2 Template:Docnav
-  5.24%    1.686      8 Template:VersionPlus
-  5.24%    1.684      6 Template:Caption
-  4.77%    1.534      1 Template:Variable
+100.00%  130.052      1 -total
+ 24.95%   32.446      1 Template:Sketcher_Tools_navi/cs
+ 17.75%   23.084      1 Template:Userdocnavi/cs
+ 17.06%   22.192      1 Template:PropertyView
+ 14.85%   19.314      2 Template:Navigation_menu_2
+  7.38%    9.599      1 Template:Variable
+  6.71%    8.732      8 Template:VersionPlus
+  5.67%    7.373     14 Template:KEY
+  5.42%    7.050      5 Template:MenuCommand
+  5.39%    7.005      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118153400 and revision id 1740700. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118153444 and revision id 1740702. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
