--- a/wiki/Arch_Roof.html
+++ b/wiki/Arch_Roof.html
@@ -58,7 +58,7 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<p>The <b>Arch Roof</b> tool allows for the creation of a sloped roof from a selected <a href="Draft_Wire.html" title="Draft Wire">Draft_Wire</a>. The created roof object is parametric, keeping its relationship with the base object. The principle is that each edge is seen allotting a profile of roof (slope, width, overhang, thickness).
+<p>The <b>Arch Roof</b> tool allows for the creation of a sloped roof from a selected polyline (<a href="Draft_Wire.html" title="Draft Wire">Draft_Wire</a>). The created roof object is parametric, keeping its relationship with the base object. The principle is that each edge is seen allotting a profile of roof (slope, width, overhang, thickness).
 </p><p><b>Note:</b> This tool is still in development, and might fail with very complex shapes. 
 </p><p><span typeof="mw:File"><a href="index.php?title=RoofExample.png&amp;filetimestamp=20141208134123&amp;.html" class="mw-file-description"><img src="File/RoofExample.png" decoding="async" width="600" height="548" class="mw-file-element" data-file-width="647" data-file-height="591"></a></span>
 </p>
@@ -191,12 +191,12 @@ The 3rd image shows the automatically generated subtraction volume.</p>
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118153306
+Cached time: 20260118153607
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.193 seconds
-Real time usage: 0.241 seconds
+CPU time usage: 0.161 seconds
+Real time usage: 0.173 seconds
 Preprocessor visited node count: 1437/1000000
 Post&#8208;expand include size: 33472/2097152 bytes
 Template argument size: 11446/2097152 bytes
@@ -207,19 +207,19 @@ Unstrip post&#8208;expand size: 6415/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   46.064      1 -total
- 20.86%    9.608      1 Template:BIM_Tools_navi
- 18.53%    8.535     13 Template:PropertyData
- 17.39%    8.011      2 Template:Navigation_menu_2
- 13.17%    6.065     13 Template:Variable
- 11.73%    5.404      1 Template:GuiCommand
-  8.20%    3.779      1 Template:Userdocnavi
-  7.83%    3.608      2 Template:Code
-  7.44%    3.425      2 Template:Docnav
-  5.16%    2.375     30 Template:Incode
+100.00%   41.623      1 -total
+ 22.11%    9.205     13 Template:PropertyData
+ 19.56%    8.141      1 Template:BIM_Tools_navi
+ 17.84%    7.425      2 Template:Navigation_menu_2
+ 17.33%    7.212     13 Template:Variable
+  8.63%    3.591      1 Template:GuiCommand
+  8.04%    3.345      1 Template:Userdocnavi
+  6.51%    2.708      2 Template:Code
+  5.54%    2.304      2 Template:Docnav
+  5.27%    2.193      1 Template:TitleProperty
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:3682-0!canonical and timestamp 20260118153315 and revision id 1740698. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:3682-0!canonical and timestamp 20260118153608 and revision id 1740703. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
