Created page with "Jev, kdy plně omezený náčrt, obvykle po významné změně jedné z jeho dimenzí, dosáhne nezamýšleného nového stavu, se nazývá „překlopení“. V následujícím příkladu změna jednoho rozměru zcela mění tvar náčrtu. Všimněte si, že náčrt s novým tvarem je stále plně svázán."

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -355,11 +355,8 @@
 <p><span id="Flipping"></span>
 </p>
 <h2><span id="P.C5.99eklopen.C3.AD"></span><span class="mw-headline" id="P&#345;eklopen&iacute;">P&#345;eklopen&iacute;</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The phenomenon that a fully constrained sketch, usually after a major change to one of its dimensions, reaches an unintended new state is know as "flipping". In the example below, changing one dimension completely changes the shape of the sketch. Note that the sketch with the new shape is still fully constrained.
-</p>
-</div>
-<p><span typeof="mw:File"><a href="../index.php?title=Sketcher_Flipping_Equal_Constraints.png&amp;filetimestamp=20250805174536&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Flipping_Equal_Constraints.png" decoding="async" width="300" height="258" class="mw-file-element" data-file-width="500" data-file-height="430"></a></span> <span typeof="mw:File"><a href="../index.php?title=Sketcher_Flipping_Equal_Constraints_Flipped.png&amp;filetimestamp=20250805174608&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Flipping_Equal_Constraints_Flipped.png" decoding="async" width="300" height="258" class="mw-file-element" data-file-width="500" data-file-height="430"></a></span>
+<p>Jev, kdy pln&#283; omezen&yacute; n&aacute;&#269;rt, obvykle po v&yacute;znamn&eacute; zm&#283;n&#283; jedn&eacute; z jeho dimenz&iacute;, dos&aacute;hne nezam&yacute;&scaron;len&eacute;ho nov&eacute;ho stavu, se naz&yacute;v&aacute; &bdquo;p&#345;eklopen&iacute;&ldquo;. V n&aacute;sleduj&iacute;c&iacute;m p&#345;&iacute;kladu zm&#283;na jednoho rozm&#283;ru zcela m&#283;n&iacute; tvar n&aacute;&#269;rtu. V&scaron;imn&#283;te si, &#382;e n&aacute;&#269;rt s nov&yacute;m tvarem je st&aacute;le pln&#283; sv&aacute;z&aacute;n.
+</p><p><span typeof="mw:File"><a href="../index.php?title=Sketcher_Flipping_Equal_Constraints.png&amp;filetimestamp=20250805174536&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Flipping_Equal_Constraints.png" decoding="async" width="300" height="258" class="mw-file-element" data-file-width="500" data-file-height="430"></a></span> <span typeof="mw:File"><a href="../index.php?title=Sketcher_Flipping_Equal_Constraints_Flipped.png&amp;filetimestamp=20250805174608&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Flipping_Equal_Constraints_Flipped.png" decoding="async" width="300" height="258" class="mw-file-element" data-file-width="500" data-file-height="430"></a></span>
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Original sketch (left), and the same sketch after increasing the 20mm value to 1000mm (right)</p>
@@ -468,13 +465,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118153447
+Cached time: 20260118153758
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.470 seconds
-Real time usage: 2.196 seconds
-Preprocessor visited node count: 1396/1000000
+CPU time usage: 0.455 seconds
+Real time usage: 0.696 seconds
+Preprocessor visited node count: 1395/1000000
 Post&#8208;expand include size: 34969/2097152 bytes
 Template argument size: 9786/2097152 bytes
 Highest expansion depth: 7/100
@@ -484,19 +481,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  130.052      1 -total
- 24.95%   32.446      1 Template:Sketcher_Tools_navi/cs
- 17.75%   23.084      1 Template:Userdocnavi/cs
- 17.06%   22.192      1 Template:PropertyView
- 14.85%   19.314      2 Template:Navigation_menu_2
-  7.38%    9.599      1 Template:Variable
-  6.71%    8.732      8 Template:VersionPlus
-  5.67%    7.373     14 Template:KEY
-  5.42%    7.050      5 Template:MenuCommand
-  5.39%    7.005      2 Template:Docnav
+100.00%   44.902      1 -total
+ 19.87%    8.921      1 Template:Sketcher_Tools_navi/cs
+ 14.44%    6.485      2 Template:Navigation_menu_2
+ 14.42%    6.473      1 Template:Userdocnavi/cs
+ 13.67%    6.138      1 Template:PropertyView
+  7.45%    3.344     34 Template:Version
+  7.39%    3.320      1 Template:Variable
+  7.32%    3.287     14 Template:KEY
+  6.95%    3.120      2 Template:Docnav
+  6.51%    2.925      8 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118153444 and revision id 1740702. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118153758 and revision id 1740705. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
