Updated page Sketcher Workbench/cs

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -355,7 +355,7 @@
 <p><span id="Flipping"></span>
 </p>
 <h2><span id="P.C5.99eklopen.C3.AD"></span><span class="mw-headline" id="P&#345;eklopen&iacute;">P&#345;eklopen&iacute;</span></h2>
-<p>Jev, kdy pln&#283; omezen&yacute; n&aacute;&#269;rt, obvykle po v&yacute;znamn&eacute; zm&#283;n&#283; jedn&eacute; z jeho dimenz&iacute;, dos&aacute;hne nezam&yacute;&scaron;len&eacute;ho nov&eacute;ho stavu, se naz&yacute;v&aacute; &bdquo;p&#345;eklopen&iacute;&ldquo;. V n&aacute;sleduj&iacute;c&iacute;m p&#345;&iacute;kladu zm&#283;na jednoho rozm&#283;ru zcela m&#283;n&iacute; tvar n&aacute;&#269;rtu. V&scaron;imn&#283;te si, &#382;e n&aacute;&#269;rt s nov&yacute;m tvarem je st&aacute;le pln&#283; sv&aacute;z&aacute;n.
+<p>Jev, kdy pln&#283; omezen&yacute; n&aacute;&#269;rt, obvykle po v&yacute;znamn&eacute; zm&#283;n&#283; jedn&eacute; z jeho dimenz&iacute;, dos&aacute;hne nezam&yacute;&scaron;len&eacute;ho nov&eacute;ho stavu, se naz&yacute;v&aacute; &bdquo;p&#345;eklopen&iacute;&ldquo;. V n&aacute;sleduj&iacute;c&iacute;m p&#345;&iacute;kladu zm&#283;na jednoho rozm&#283;ru zcela m&#283;n&iacute; tvar n&aacute;&#269;rtu. V&scaron;imn&#283;te si, &#382;e n&aacute;&#269;rt s nov&yacute;m tvarem je st&aacute;le pln&#283; zavazben.
 </p><p><span typeof="mw:File"><a href="../index.php?title=Sketcher_Flipping_Equal_Constraints.png&amp;filetimestamp=20250805174536&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Flipping_Equal_Constraints.png" decoding="async" width="300" height="258" class="mw-file-element" data-file-width="500" data-file-height="430"></a></span> <span typeof="mw:File"><a href="../index.php?title=Sketcher_Flipping_Equal_Constraints_Flipped.png&amp;filetimestamp=20250805174608&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Flipping_Equal_Constraints_Flipped.png" decoding="async" width="300" height="258" class="mw-file-element" data-file-width="500" data-file-height="430"></a></span>
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -465,12 +465,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118153758
+Cached time: 20260118153841
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.455 seconds
-Real time usage: 0.696 seconds
+CPU time usage: 0.404 seconds
+Real time usage: 0.536 seconds
 Preprocessor visited node count: 1395/1000000
 Post&#8208;expand include size: 34969/2097152 bytes
 Template argument size: 9786/2097152 bytes
@@ -481,19 +481,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   44.902      1 -total
- 19.87%    8.921      1 Template:Sketcher_Tools_navi/cs
- 14.44%    6.485      2 Template:Navigation_menu_2
- 14.42%    6.473      1 Template:Userdocnavi/cs
- 13.67%    6.138      1 Template:PropertyView
-  7.45%    3.344     34 Template:Version
-  7.39%    3.320      1 Template:Variable
-  7.32%    3.287     14 Template:KEY
-  6.95%    3.120      2 Template:Docnav
-  6.51%    2.925      8 Template:VersionPlus
+100.00%   41.829      1 -total
+ 28.56%   11.947      1 Template:Sketcher_Tools_navi/cs
+ 17.20%    7.195      2 Template:Navigation_menu_2
+ 16.96%    7.095      1 Template:Userdocnavi/cs
+  8.21%    3.436      1 Template:PropertyView
+  6.49%    2.713     34 Template:Version
+  6.07%    2.537      2 Template:Docnav
+  5.10%    2.134     14 Template:KEY
+  4.95%    2.070      8 Template:VersionPlus
+  4.50%    1.882      6 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118153758 and revision id 1740705. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118153841 and revision id 1740707. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
