Created page with "{{Caption|Původní náčrt (vlevo) a stejný náčrt po zvýšení hodnoty 20 mm na 1000 mm (vpravo)}}"

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -358,9 +358,7 @@
 <p>Jev, kdy pln&#283; omezen&yacute; n&aacute;&#269;rt, obvykle po v&yacute;znamn&eacute; zm&#283;n&#283; jedn&eacute; z jeho dimenz&iacute;, dos&aacute;hne nezam&yacute;&scaron;len&eacute;ho nov&eacute;ho stavu, se naz&yacute;v&aacute; &bdquo;p&#345;eklopen&iacute;&ldquo;. V n&aacute;sleduj&iacute;c&iacute;m p&#345;&iacute;kladu zm&#283;na jednoho rozm&#283;ru zcela m&#283;n&iacute; tvar n&aacute;&#269;rtu. V&scaron;imn&#283;te si, &#382;e n&aacute;&#269;rt s nov&yacute;m tvarem je st&aacute;le pln&#283; zavazben.
 </p><p><span typeof="mw:File"><a href="../index.php?title=Sketcher_Flipping_Equal_Constraints.png&amp;filetimestamp=20250805174536&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Flipping_Equal_Constraints.png" decoding="async" width="300" height="258" class="mw-file-element" data-file-width="500" data-file-height="430"></a></span> <span typeof="mw:File"><a href="../index.php?title=Sketcher_Flipping_Equal_Constraints_Flipped.png&amp;filetimestamp=20250805174608&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Flipping_Equal_Constraints_Flipped.png" decoding="async" width="300" height="258" class="mw-file-element" data-file-width="500" data-file-height="430"></a></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Original sketch (left), and the same sketch after increasing the 20mm value to 1000mm (right)</p>
-</div>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">P&#367;vodn&iacute; n&aacute;&#269;rt (vlevo) a stejn&yacute; n&aacute;&#269;rt po zv&yacute;&scaron;en&iacute; hodnoty 20 mm na 1000 mm (vpravo)</p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Methods_to_reduce_flipping">Methods to reduce flipping</span></h3>
 </div>
@@ -465,15 +463,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118153841
+Cached time: 20260118153922
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.404 seconds
-Real time usage: 0.536 seconds
-Preprocessor visited node count: 1395/1000000
-Post&#8208;expand include size: 34969/2097152 bytes
-Template argument size: 9786/2097152 bytes
+CPU time usage: 0.447 seconds
+Real time usage: 0.601 seconds
+Preprocessor visited node count: 1394/1000000
+Post&#8208;expand include size: 34965/2097152 bytes
+Template argument size: 9784/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -481,19 +479,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   41.829      1 -total
- 28.56%   11.947      1 Template:Sketcher_Tools_navi/cs
- 17.20%    7.195      2 Template:Navigation_menu_2
- 16.96%    7.095      1 Template:Userdocnavi/cs
-  8.21%    3.436      1 Template:PropertyView
-  6.49%    2.713     34 Template:Version
-  6.07%    2.537      2 Template:Docnav
-  5.10%    2.134     14 Template:KEY
-  4.95%    2.070      8 Template:VersionPlus
-  4.50%    1.882      6 Template:Caption
+100.00%   41.437      1 -total
+ 19.38%    8.032      1 Template:Sketcher_Tools_navi/cs
+ 13.81%    5.722      1 Template:Userdocnavi/cs
+ 12.32%    5.103      2 Template:Navigation_menu_2
+ 12.27%    5.085      1 Template:PropertyView
+  8.25%    3.419      2 Template:Docnav
+  7.55%    3.129     34 Template:Version
+  7.02%    2.908      6 Template:Caption
+  6.81%    2.823      1 Template:Variable
+  5.02%    2.080      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118153841 and revision id 1740707. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118153921 and revision id 1740709. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
