Created page with "=== Metody ke snížení překlápění ==="

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -359,9 +359,9 @@
 </p><p><span typeof="mw:File"><a href="../index.php?title=Sketcher_Flipping_Equal_Constraints.png&amp;filetimestamp=20250805174536&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Flipping_Equal_Constraints.png" decoding="async" width="300" height="258" class="mw-file-element" data-file-width="500" data-file-height="430"></a></span> <span typeof="mw:File"><a href="../index.php?title=Sketcher_Flipping_Equal_Constraints_Flipped.png&amp;filetimestamp=20250805174608&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Flipping_Equal_Constraints_Flipped.png" decoding="async" width="300" height="258" class="mw-file-element" data-file-width="500" data-file-height="430"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">P&#367;vodn&iacute; n&aacute;&#269;rt (vlevo) a stejn&yacute; n&aacute;&#269;rt po zv&yacute;&scaron;en&iacute; hodnoty 20 mm na 1000 mm (vpravo)</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Methods_to_reduce_flipping">Methods to reduce flipping</span></h3>
-</div>
+<p><span id="Methods_to_reduce_flipping"></span>
+</p>
+<h3><span id="Metody_ke_sn.C3.AD.C5.BEen.C3.AD_p.C5.99ekl.C3.A1p.C4.9Bn.C3.AD"></span><span class="mw-headline" id="Metody_ke_sn&iacute;&#382;en&iacute;_p&#345;ekl&aacute;p&#283;n&iacute;">Metody ke sn&iacute;&#382;en&iacute; p&#345;ekl&aacute;p&#283;n&iacute;</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h4><span class="mw-headline" id="Change_dimensions_in_small_increments">Change dimensions in small increments</span></h4>
 </div>
@@ -463,12 +463,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118153922
+Cached time: 20260118153947
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.447 seconds
-Real time usage: 0.601 seconds
+CPU time usage: 0.474 seconds
+Real time usage: 0.699 seconds
 Preprocessor visited node count: 1394/1000000
 Post&#8208;expand include size: 34965/2097152 bytes
 Template argument size: 9784/2097152 bytes
@@ -479,19 +479,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   41.437      1 -total
- 19.38%    8.032      1 Template:Sketcher_Tools_navi/cs
- 13.81%    5.722      1 Template:Userdocnavi/cs
- 12.32%    5.103      2 Template:Navigation_menu_2
- 12.27%    5.085      1 Template:PropertyView
-  8.25%    3.419      2 Template:Docnav
-  7.55%    3.129     34 Template:Version
-  7.02%    2.908      6 Template:Caption
-  6.81%    2.823      1 Template:Variable
-  5.02%    2.080      1 Template:TOCright
+100.00%   70.491      1 -total
+ 27.12%   19.119      1 Template:Sketcher_Tools_navi/cs
+ 14.95%   10.536      1 Template:Userdocnavi/cs
+  9.26%    6.529      2 Template:Navigation_menu_2
+  7.63%    5.376      6 Template:Caption
+  6.94%    4.895      2 Template:Docnav
+  6.69%    4.719     34 Template:Version
+  5.88%    4.147      1 Template:PropertyView
+  5.40%    3.803      1 Template:TOCright
+  5.21%    3.672      5 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118153921 and revision id 1740709. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118153946 and revision id 1740711. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
