Created page with "==== Měňte rozměry po malých krocích ===="

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -362,9 +362,9 @@
 <p><span id="Methods_to_reduce_flipping"></span>
 </p>
 <h3><span id="Metody_ke_sn.C3.AD.C5.BEen.C3.AD_p.C5.99ekl.C3.A1p.C4.9Bn.C3.AD"></span><span class="mw-headline" id="Metody_ke_sn&iacute;&#382;en&iacute;_p&#345;ekl&aacute;p&#283;n&iacute;">Metody ke sn&iacute;&#382;en&iacute; p&#345;ekl&aacute;p&#283;n&iacute;</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h4><span class="mw-headline" id="Change_dimensions_in_small_increments">Change dimensions in small increments</span></h4>
-</div>
+<p><span id="Change_dimensions_in_small_increments"></span>
+</p>
+<h4><span id="M.C4.9B.C5.88te_rozm.C4.9Bry_po_mal.C3.BDch_kroc.C3.ADch"></span><span class="mw-headline" id="M&#283;&#328;te_rozm&#283;ry_po_mal&yacute;ch_kroc&iacute;ch">M&#283;&#328;te rozm&#283;ry po mal&yacute;ch kroc&iacute;ch</span></h4>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>This is not always practical, but changing dimension values in smaller increments can work.
 </p>
@@ -463,12 +463,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118153947
+Cached time: 20260118154039
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.474 seconds
-Real time usage: 0.699 seconds
+CPU time usage: 0.424 seconds
+Real time usage: 0.729 seconds
 Preprocessor visited node count: 1394/1000000
 Post&#8208;expand include size: 34965/2097152 bytes
 Template argument size: 9784/2097152 bytes
@@ -479,19 +479,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   70.491      1 -total
- 27.12%   19.119      1 Template:Sketcher_Tools_navi/cs
- 14.95%   10.536      1 Template:Userdocnavi/cs
-  9.26%    6.529      2 Template:Navigation_menu_2
-  7.63%    5.376      6 Template:Caption
-  6.94%    4.895      2 Template:Docnav
-  6.69%    4.719     34 Template:Version
-  5.88%    4.147      1 Template:PropertyView
-  5.40%    3.803      1 Template:TOCright
-  5.21%    3.672      5 Template:MenuCommand
+100.00%   58.895      1 -total
+ 24.46%   14.405      1 Template:Sketcher_Tools_navi/cs
+ 14.50%    8.538      2 Template:Navigation_menu_2
+ 13.14%    7.740      1 Template:PropertyView
+ 11.51%    6.777      1 Template:Userdocnavi/cs
+  7.76%    4.568      1 Template:Variable
+  6.54%    3.854      6 Template:Caption
+  6.42%    3.782     34 Template:Version
+  5.76%    3.393      8 Template:VersionPlus
+  5.34%    3.147      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118153946 and revision id 1740711. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118154038 and revision id 1740713. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
