Created page with "To není vždy praktické, ale změna hodnot rozměrů po menších krocích může fungovat."

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -365,10 +365,8 @@
 <p><span id="Change_dimensions_in_small_increments"></span>
 </p>
 <h4><span id="M.C4.9B.C5.88te_rozm.C4.9Bry_po_mal.C3.BDch_kroc.C3.ADch"></span><span class="mw-headline" id="M&#283;&#328;te_rozm&#283;ry_po_mal&yacute;ch_kroc&iacute;ch">M&#283;&#328;te rozm&#283;ry po mal&yacute;ch kroc&iacute;ch</span></h4>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>This is not always practical, but changing dimension values in smaller increments can work.
+<p>To nen&iacute; v&#382;dy praktick&eacute;, ale zm&#283;na hodnot rozm&#283;r&#367; po men&scaron;&iacute;ch kroc&iacute;ch m&#367;&#382;e fungovat.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h4><span class="mw-headline" id="Use_a_different_solver">Use a different solver</span></h4>
 </div>
@@ -463,13 +461,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118154039
+Cached time: 20260118154113
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.424 seconds
-Real time usage: 0.729 seconds
-Preprocessor visited node count: 1394/1000000
+CPU time usage: 0.445 seconds
+Real time usage: 0.741 seconds
+Preprocessor visited node count: 1393/1000000
 Post&#8208;expand include size: 34965/2097152 bytes
 Template argument size: 9784/2097152 bytes
 Highest expansion depth: 7/100
@@ -479,19 +477,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   58.895      1 -total
- 24.46%   14.405      1 Template:Sketcher_Tools_navi/cs
- 14.50%    8.538      2 Template:Navigation_menu_2
- 13.14%    7.740      1 Template:PropertyView
- 11.51%    6.777      1 Template:Userdocnavi/cs
-  7.76%    4.568      1 Template:Variable
-  6.54%    3.854      6 Template:Caption
-  6.42%    3.782     34 Template:Version
-  5.76%    3.393      8 Template:VersionPlus
-  5.34%    3.147      2 Template:Docnav
+100.00%   73.705      1 -total
+ 25.70%   18.940      6 Template:Caption
+ 24.94%   18.380      1 Template:Sketcher_Tools_navi/cs
+ 20.15%   14.850      2 Template:Navigation_menu_2
+ 14.10%   10.389      1 Template:Userdocnavi/cs
+  5.12%    3.776     34 Template:Version
+  4.58%    3.379      8 Template:VersionPlus
+  4.01%    2.954      1 Template:PropertyView
+  3.60%    2.656      2 Template:Docnav
+  2.52%    1.860      5 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118154038 and revision id 1740713. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118154112 and revision id 1740715. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
