--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -370,10 +370,9 @@
 </p>
 <h4><span id="Pou.C5.BEijte_jin.C3.BD_.C5.99e.C5.A1i.C4.8D"></span><span class="mw-headline" id="Pou&#382;ijte_jin&yacute;_&#345;e&scaron;i&#269;">Pou&#382;ijte jin&yacute; &#345;e&scaron;i&#269;</span></h4>
 <p>&#344;e&scaron;itel LevenbergMarquardt, kter&yacute; nen&iacute; v&yacute;choz&iacute;m &#345;e&scaron;itelem, je zn&aacute;m&yacute; t&iacute;m, &#382;e je m&eacute;n&#283; n&aacute;chyln&yacute; k p&#345;ekl&aacute;p&#283;n&iacute;. V&iacute;ce informac&iacute; najdete v <a href="../Sketcher_Dialog.html#Advanced_solver_control" title="Sketcher Dialog">dialogov&eacute;m okn&#283; Sketcheru</a>.
+</p><p><span id="Use_horizontal_and_vertical_dimensions"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h4><span class="mw-headline" id="Use_horizontal_and_vertical_dimensions">Use horizontal and vertical dimensions</span></h4>
-</div>
+<h4><span id="Pou.C5.BEijte_horizont.C3.A1ln.C3.AD_a_vertik.C3.A1ln.C3.AD_rozm.C4.9Bry"></span><span class="mw-headline" id="Pou&#382;ijte_horizont&aacute;ln&iacute;_a_vertik&aacute;ln&iacute;_rozm&#283;ry">Pou&#382;ijte horizont&aacute;ln&iacute; a vertik&aacute;ln&iacute; rozm&#283;ry</span></h4>
 <p><span typeof="mw:File"><a href="../index.php?title=Sketcher_Flipping_HorVer_Dimensions.png&amp;filetimestamp=20250805174627&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Flipping_HorVer_Dimensions.png" decoding="async" width="300" height="258" class="mw-file-element" data-file-width="500" data-file-height="430"></a></span>
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -458,12 +457,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118154313
+Cached time: 20260118154354
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.446 seconds
-Real time usage: 0.865 seconds
+CPU time usage: 0.457 seconds
+Real time usage: 1.154 seconds
 Preprocessor visited node count: 1392/1000000
 Post&#8208;expand include size: 34965/2097152 bytes
 Template argument size: 9784/2097152 bytes
@@ -474,19 +473,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   75.430      1 -total
- 24.97%   18.833      1 Template:Sketcher_Tools_navi/cs
- 13.34%   10.061      2 Template:Navigation_menu_2
- 12.74%    9.613      1 Template:PropertyView
- 11.04%    8.328      1 Template:Userdocnavi/cs
-  7.80%    5.880      6 Template:Caption
-  6.88%    5.193      1 Template:Variable
-  6.61%    4.987     34 Template:Version
-  5.89%    4.440      8 Template:VersionPlus
-  5.66%    4.269     14 Template:KEY
+100.00%  115.124      1 -total
+ 20.29%   23.357      1 Template:Sketcher_Tools_navi/cs
+ 16.98%   19.551      1 Template:Userdocnavi/cs
+ 15.27%   17.585      2 Template:Navigation_menu_2
+  8.06%    9.276     34 Template:Version
+  7.73%    8.895      5 Template:MenuCommand
+  7.21%    8.299      1 Template:TOCright
+  7.14%    8.223      1 Template:PropertyView
+  6.83%    7.866      2 Template:Docnav
+  6.30%    7.258      6 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118154312 and revision id 1740719. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118154353 and revision id 1740721. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
